Add email notifications and 14-day signed-request reminders

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,16 @@ PORT=8787
 # DB_PATH=./data/vacations.sqlite
 # Optional frontend URL for printed employee/manager links in logs.
 # FRONTEND_URL=http://localhost:5173
+
+# Email notifications (new requests + signed request reminders).
+# EMAIL_NOTIFICATIONS_ENABLED=true
+# MANAGER_NOTIFICATION_EMAIL=modestas@eigida.lt
+# SMTP_HOST=smtp.office365.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=notifications@your-company.lt
+# SMTP_PASS=your_smtp_password
+# SMTP_FROM=notifications@your-company.lt
+
+# Reminder check interval (milliseconds). Default: 3600000 (1 hour)
+# SIGNED_REQUEST_REMINDER_INTERVAL_MS=3600000
