--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,7 @@ PORT=8787
 # SMTP_USER=notifications@your-company.lt
 # SMTP_PASS=your_smtp_password
 # SMTP_FROM=notifications@your-company.lt
+# SMTP_ALLOW_INTERNAL_INTERFACES=true
 
 # Reminder check interval (milliseconds). Default: 3600000 (1 hour)
 # SIGNED_REQUEST_REMINDER_INTERVAL_MS=3600000
