Add Resend API email provider with SMTP fallback

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,11 @@ PORT=8787
 
 # Email notifications (new requests + signed request reminders).
 # EMAIL_NOTIFICATIONS_ENABLED=true
+# EMAIL_PROVIDER=auto
 # MANAGER_NOTIFICATION_EMAIL=modestas@eigida.lt
+# RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxx
+# RESEND_FROM=onboarding@resend.dev
+# RESEND_API_BASE=https://api.resend.com
 # SMTP_HOST=smtp.office365.com
 # SMTP_PORT=587
 # SMTP_SECURE=false
