Add office IP allowlist for UI and API access

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,11 @@ PORT=8787
 # DB_PATH=./data/vacations.sqlite
 # Optional frontend URL for printed employee/manager links in logs.
 # FRONTEND_URL=http://localhost:5173
+# IP allowlist for UI + API access (comma-separated).
+# Default in code: 85.206.86.184
+# ALLOWED_IPS=85.206.86.184
+# Set false only for temporary troubleshooting.
+# IP_ALLOWLIST_ENABLED=true
 
 # Email notifications (new requests + signed request reminders).
 # EMAIL_NOTIFICATIONS_ENABLED=true
